@@ -94,7 +94,7 @@
     background-color: #FFFF00;
     border-style: solid;
     border-color: #6E6E6E;
-    border-width: 2px 1px 2px 1px;
+    border-width: 1px 1px 1px 1px;
     z-index: 8;
     min-width: 1px;
     cursor: pointer;
@@ -110,7 +110,7 @@
     background-color: #66CC00;
     border-style: solid;
     border-color: #6E6E6E;
-    border-width: 2px 1px 2px 1px;
+    border-width: 1px 1px 1px 1px;
     z-index: 8;
     min-width: 1px;
     cursor: pointer;
@@ -126,7 +126,7 @@
 background-color: #FF00FF;
     border-style: solid;
     border-color: #6E6E6E;
-    border-width: 2px 1px 2px 1px;
+    border-width: 1px 1px 1px 1px;
     z-index: 8;
     min-width: 1px;
     cursor: pointer;
@@ -142,7 +142,7 @@ background-color: #FF00FF;
     background-color: #663366;
     border-style: solid;
     border-color: #6E6E6E;
-    border-width: 2px 1px 2px 1px;
+    border-width: 1px 1px 1px 1px;
     z-index: 8;
     min-width: 1px;
     cursor: pointer;
@@ -158,7 +158,7 @@ background-color: #FF00FF;
     background-color: #FAFAD2;
     border-style: solid;
     border-color: #6E6E6E;
-    border-width: 2px 1px 2px 1px;
+    border-width: 1px 1px 1px 1px;
     z-index: 8;
     min-width: 1px;
     cursor: pointer;
@@ -174,7 +174,7 @@ background-color: #FF00FF;
     background-color: #FF0000;
     border-style: solid;
     border-color: #6E6E6E;
-    border-width: 2px 1px 2px 1px;
+    border-width: 1px 1px 1px 1px;
     z-index: 8;
     min-width: 1px;
     cursor: pointer;
@@ -190,7 +190,7 @@ background-color: #FF00FF;
     background-color: #8C468C;
     border-style: solid;
     border-color: #6E6E6E;
-    border-width: 2px 1px 2px 1px;
+    border-width: 1px 1px 1px 1px;
     z-index: 8;
     min-width: 1px;
     cursor: pointer;
